--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
         <input name="message" type="text" placeholder="Message"/>
         <button>Send</button>
     </form>
+    <button id="send-location">Send Location</button>
     <!-- load socket.io library-->
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/libs/jquery-3.1.0.min.js"></script>
