--- a/public/index.html
+++ b/public/index.html
@@ -15,18 +15,29 @@
                 <h3>Join a chat</h3>
             </div>
             <div class="form-field">
-                <label>Display name</label>
+                <label>Enter name</label>
                 <input type="text" name="name" autofocus/>
             </div>
             <div class="form-field">
-              <label>Room name</label>  
+              <label>Create chat room</label>  
               <input type="text" name="room"/>
             </div>
             <div class="form-field">
-            <button>Join</button>    
+                <label>Active chat rooms</label>  
+              <!-- <select name="activeRoom" id="select"> -->
+            <select id="select" name="activeRoom">
+                <option value="">Select</option>
+            </select>                
+              </div>
+            
+            <div class="form-field">
+            <button>Join</button>
             </div>
         </form>
     </div>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/libs/jquery-3.1.0.min.js"></script>
+    <script src="/js/index.js"></script>
 
 </body>
 
