chat.js not loading

--- a/public/chat.html
+++ b/public/chat.html
@@ -9,10 +9,10 @@
 </head>
 
 <body class="chat">
-    <div class="chat__sidebar">
+    <!-- <div class="chat__sidebar">
         <h3>Chitchat</h3>
         <div id="users"></div>
-    </div>
+    </div> -->
     <div class="chat__main">
         <ol id="messages" class="chat__messages"></ol>
 
@@ -58,7 +58,9 @@
     <script src="js/libs/moment.js"></script>
     <script src="js/libs/mustache.js"></script>
     <script src="js/libs/deparam.js"></script>
+    
     <script src="/js/chat.js"></script>
+    <script src="/js/signup.js"></script>
 </body>
 
 </html>
