Add private chat feature

--- a/public/index.html
+++ b/public/index.html
@@ -76,8 +76,12 @@
     <div class="centered-form" id="chat">
 
         <div class="chat__sidebar">
-            <h3>Chitchat</h3>
+            <h3>Active</h3>
             <div id="displayUsers"></div>
+        </div>
+        <div class="chat__sidebar">
+            <h3>chats</h3>
+            <div id="chats"></div>
         </div>
         <div style="flex-direction:row; width:50%;">
             <div class="centered-form__form" id="createRoom">
