Add private chat fuctionality

--- a/public/index.html
+++ b/public/index.html
@@ -125,8 +125,6 @@
                     </div>
                 </div>
 
-
-
                 <script id="message-template" type="text/template">
             <li class="message">
             <div class="message__title">
@@ -146,7 +144,44 @@
                     <span>{{createdAt}}</span>
                 </div>
                  <div class="message__body">
-                     <a href="{{url}}" target="_black">My current location</a>
+                     <a href="{{url}}" target="_blank">My current location</a>
+                 </div>
+                </li>
+                </script>
+            </div>
+            <div class="chat" id="privateChatRoom">
+                <div class="chat__main">
+                    <ol id="private-messages" class="chat__messages"></ol>
+
+                    <div class="chat__footer">
+                        <form id="private-message-form">
+                            <input name="privateMessage" class="chat__input" type="text" placeholder="Message" autofocus autocomplete="" />
+                            <button>Send</button>
+                        </form>
+                        <button id="send-private-location">Send Location</button>
+                    </div>
+                </div>
+
+                <script id="private-message-template" type="text/template">
+            <li class="message">
+            <div class="message__title">
+                <h4>{{from}}</h4>
+                <span>{{createdAt}}</span>
+            </div>
+             <div class="message__body">
+                 <p>{{text}}</p>
+             </div>
+            </li>
+            </script>
+
+                <script id="private-location-message-template" type="text/template">
+                <li class="message">
+                <div class="message__title">
+                    <h4>{{from}}</h4>
+                    <span>{{createdAt}}</span>
+                </div>
+                 <div class="message__body">
+                     <a href="{{url}}" target="_blank">My current location</a>
                  </div>
                 </li>
                 </script>
