--- a/public/group-chat.html
+++ b/public/group-chat.html
@@ -1,23 +1,22 @@
-
 <html>
 
 <head>
-   
+
     <title>Chat | ChatApp</title>
     <link rel="stylesheet" href="/css/style.css">
-   
+
 </head>
 
 <body class="chat">
     <!-- <div class="chat__sidebar">
-        <h3>Chitchat</h3>
-        <div id="users"></div>
-    </div> -->
+            <h3>Chitchat</h3>
+            <div id="users"></div>
+        </div> -->
     <div class="chat__main">
-        <ol id="messages" class="chat__messages"></ol>
+        <ol id="group-messages" class="chat__messages"></ol>
 
         <div class="chat__footer">
-            <form id="message-form">
+            <form id="group-message-form">
                 <input name="message" class="chat__input" type="text" placeholder="Message" autofocus autocomplete="" />
                 <button>Send</button>
             </form>
@@ -25,40 +24,33 @@
         </div>
     </div>
 
-
-
-    <script id="message-template" type="text/template">
-<li class="message">
-<div class="message__title">
-    <h4>{{from}}</h4>
-    <span>{{createdAt}}</span>
-</div>
- <div class="message__body">
-     <p>{{text}}</p>
- </div>
-</li>
-</script>
-
-    <script id="location-message-template" type="text/template">
+    <script id="group-message-template" type="text/template">
     <li class="message">
     <div class="message__title">
         <h4>{{from}}</h4>
         <span>{{createdAt}}</span>
     </div>
      <div class="message__body">
-         <a href="{{url}}" target="_blank">My current location</a>
+         <p>{{text}}</p>
      </div>
     </li>
     </script>
 
-
-    <!-- load socket.io library-->
-    <!-- <script src="/socket.io/socket.io.js"></script> -->
+    <script id="location-message-template" type="text/template">
+        <li class="message">
+        <div class="message__title">
+            <h4>{{from}}</h4>
+            <span>{{createdAt}}</span>
+        </div>
+         <div class="message__body">
+             <a href="{{url}}" target="_black">My current location</a>
+         </div>
+        </li>
+        </script>
     <script src="/js/libs/jquery-3.1.0.min.js"></script>
     <script src="js/libs/moment.js"></script>
     <script src="js/libs/mustache.js"></script>
-    <script src="js/libs/deparam.js"></script> 
-    
+    <script src="js/libs/deparam.js"></script>
     <script src="/js/signup.js"></script>
 </body>
 
